Update: customer content__customer & product__container

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
                         <img class="image" src="/assets/img/placeholder-image.png" alt="slider image">
                         <span>Fresh Everyday</span>
                     </div>
+
+                    <div class="content__customer">
+                        <div class="circle">
+                            logo orang
+                        </div>
+                        
+                        <div class="customer__name">
+                            <span>nama</span>
+                            <span><i>pekerjaan, umur</i></span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="content__right">
@@ -79,6 +90,16 @@
                     </form>
                 </div>
             </div>
+
+            <div class="product__container">
+                <div class="product__info">
+                    info
+                </div>
+
+                <div class="circle">
+                    1
+                </div>
+            </div>
         </section>
 
 
@@ -87,6 +108,7 @@
 
         </section>
 
+        <!--=============== CALL US ===============-->
         <section class="section__call">
 
         </section>
