Update: navigation inside table tag

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         </div>
 
         <nav class="nav__container">
-            <a href="/" class="nav__home nav__item">Home</a>
-            <a href="/" class="nav__package nav__item">Our Package</a>
-            <a href="/" class="nav__call nav__item">Call Us</a>
+            <table>
+                <tr>
+                    <th><a href="/" class="nav__home nav__item">Home</a></th>
+                    <th><a href="/" class="nav__package nav__item">Our Package</a></th>
+                    <th><a href="/" class="nav__call nav__item">Call Us</a></th>
+                </tr>
+            </table>
         </nav>
     </header>
 
