Testing: nav link section - Success

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <nav class="nav__container">
             <table>
                 <tr>
-                    <th><a href="/" class="nav__home nav__item">Home</a></th>
-                    <th><a href="/" class="nav__package nav__item">Our Package</a></th>
-                    <th><a href="/" class="nav__call nav__item">Call Us</a></th>
+                    <th><a href="#home" class="nav__home nav__item">Home</a></th>
+                    <th><a href="#our__package" class="nav__package nav__item">Our Package</a></th>
+                    <th><a href="#call__us" class="nav__call nav__item">Call Us</a></th>
                 </tr>
             </table>
         </nav>
@@ -38,7 +38,7 @@
     <!--=============== MAIN ===============-->
     <main>
         <!--=============== HOME ===============-->
-        <section class="section__home">
+        <section class="section__home" id="home">
             <div class="title__container">
                 <div class="title">
                     <h1>Top Rated E-Groceries Shop in Indonesian</h1>
@@ -108,13 +108,15 @@
 
 
         <!--=============== OUR PACKAGE ===============-->
-        <section class="section__package">
+        <section class="section__package" id="our__package">
+            <div class="test">
 
+            </div>
         </section>
 
         <!--=============== CALL US ===============-->
-        <section class="section__call">
-
+        <section class="section__call" id="call__us">
+            <div class="test"></div>
         </section>
     </main>
 
