Update: remove table tag from navigation

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
 
         <nav class="nav__container">
-            <table>
-                <tr>
-                    <th><a href="#home" class="nav__home nav__item">Home</a></th>
-                    <th><a href="#our__package" class="nav__package nav__item">Our Package</a></th>
-                    <th><a href="#call__us" class="nav__call nav__item">Call Us</a></th>
-                </tr>
-            </table>
+            <!-- !<table>    /* !padding hover akan terlihat tidak menyatu jika menggunakan table */
+                <tr> -->
+                    <a href="#home" class="nav__home nav__item">Home</a>
+                    <a href="#our__package" class="nav__package nav__item">Our Package</a>
+                    <a href="#call__us" class="nav__call nav__item">Call Us</a>
+                <!-- </tr>
+            </table> -->
         </nav>
     </header>
 
