Update: new style of content-left & image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="nav__container">
             <!-- !<table>    /* !padding hover akan terlihat tidak menyatu jika menggunakan table */
                 <tr> -->
-                    <a href="#home" class="nav__home nav__item">Home</a>
+                    <a href="#title" class="nav__home nav__item">Home</a>
                     <a href="#our__package" class="nav__package nav__item">Our Package</a>
                     <a href="#call__us" class="nav__call nav__item">Call Us</a>
                 <!-- </tr>
@@ -40,7 +40,7 @@
         <!--=============== HOME ===============-->
         <section class="section__home" id="home">
             <div class="title__container">
-                <div class="title">
+                <div class="title" id="title">
                     <h1>Top Rated E-Groceries Shop in Indonesian</h1>
                 </div>
 
@@ -53,7 +53,7 @@
                 <div class="content__left">
                     <div class="content__image">
                         <img class="image" src="/assets/img/placeholder-image.png" alt="slider image">
-                        <span>Fresh Everyday</span>
+                        <span><i>"Setiap hari beli sayur buah yang fresh di sini"</i></span>
                     </div>
 
                     <div class="content__customer">
