Update: fonts & new style form

--- a/index.html
+++ b/index.html
@@ -69,19 +69,21 @@
                 </div>
 
                 <div class="content__right">
-                    <div class="form__title">
-                        Contact Us
-                    </div>
+                    <div class="form__title-container">
+                        <div class="form__title">
+                            Contact Us
+                        </div>
 
-                    <div class="form__subtitle">
-                        Sales akan menghubungin anda 1x24 jam setelah data kami terima
+                        <div class="form__subtitle">
+                            Sales akan menghubungin anda 1x24 jam setelah data kami terima
+                        </div>
                     </div>
 
                     <form action="/">
-                        <label for="your-name">Your Name</label>
+                        <label for="your-name">Your Name:</label>
                         <input type="text" name="your-name" id="your-name" placeholder="First and last name">
 
-                        <label for="email">Email Address</label>
+                        <label for="email">Email Address:</label>
                         <input type="email" name="email" id="email" placeholder="example@email.com">
 
                         <label for="interest">What are you interested in?</label>
