Checkpoint: content home

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
                     <div class="content__customer">
                         <div class="circle">
-                            logo orang
+                            <i class='bx bx-user'></i>
                         </div>
                         
                         <div class="customer__name">
-                            <span>nama</span>
-                            <span><i>pekerjaan, umur</i></span>
+                            <span><b>Nama Panjang</b></span>
+                            <span><i>Pekerjaan, 23</i></span>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                             <option value="badminton">Badminton</option>
                         </select>
 
-                        <button type="submit" id="button">SEND</button>
+                        <button type="submit" id="button"><b>SEND</b></button>
                     </form>
                 </div>
             </div>
