Checkpoint: content home 2

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
                 <div class="content__left">
                     <div class="content__image">
                         <img class="image" src="/assets/img/placeholder-image.png" alt="slider image">
-                        <span><i>"Setiap hari beli sayur buah yang fresh di sini"</i></span>
-                    </div>
+                        <span class="image-tag"><i>"Setiap hari beli sayur buah yang fresh di sini"</i></span>
 
-                    <div class="content__customer">
-                        <div class="circle">
-                            <i class='bx bx-user'></i>
-                        </div>
-                        
-                        <div class="customer__name">
-                            <span><b>Nama Panjang</b></span>
-                            <span><i>Pekerjaan, 23</i></span>
+                        <div class="content__customer">
+                            <div class="circle">
+                                <i class='bx bx-user'></i>
+                            </div>
+                            
+                            <div class="customer__name">
+                                <span><b>Nama Panjang</b></span>
+                                <span><i>Pekerjaan, 23</i></span>
+                            </div>
                         </div>
                     </div>
                 </div>
