Update: product under content

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
                         <label for="interest">What are you interested in?</label>
                         <select name="interest" id="interest" aria-placeholder="Select option">
+                            <option value="" selected>Select option</option>    <!-- *bisa ditambah <disabled> agar tidak bisa dipilih-->
                             <option value="football">Football</option>
                             <option value="badminton">Badminton</option>
                         </select>
@@ -98,13 +99,44 @@
             </div>
 
             <div class="product__container">
-                <div class="product__info">
-                    info
+                <div class="product">
+                    <div class="product__info">
+                        Use this space to provide users with more information about your offer.
+                        Consider it a follow-up to your headline and explain the benefits of your service or product
+                    </div>
+
+                    <div class="product__point">
+                        <div class="circle">
+                            1
+                        </div>
+
+                        <div class="product__point-text">
+                            Your first feature, written in the form of a benefit statement.
+                        </div>
+                    </div>
+
+                    <div class="product__point">
+                        <div class="circle">
+                            2
+                        </div>
+
+                        <div class="product__point-text">
+                            Your second feature, written in the form of a benefit statement.
+                        </div>
+                    </div>
+
+                    <div class="product__point">
+                        <div class="circle">
+                            3
+                        </div>
+
+                        <div class="product__point-text">
+                            Your third feature, written in the form of a benefit statement.
+                        </div>
+                    </div>
                 </div>
 
-                <div class="circle">
-                    1
-                </div>
+                <div class="product__space"></div>
             </div>
         </section>
 
