Update: add Variable CSS

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="content__container">
                 <div class="content__left">
                     <div class="content__image">
-                        <img class="image" src="/assets/img/placeholder-image.png" alt="slider image">
+                        <img class="image" src="./assets/img/placeholder-image.png" alt="slider image">
                         <span class="image-tag"><i>"Setiap hari beli sayur buah yang fresh di sini"</i></span>
 
                         <div class="content__customer">
