--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
 
                      <!--=============== FORM ===============-->
-                    <form name="contact-form">
+                    <form name="contact-form" onsubmit="return validateForm()">     <!-- !jangan lupa onsubmit -->
                         <label for="your-name">Your Name:<span>*</span></label>
                         <input type="text" name="your-name" id="your-name" placeholder="First and last name">
                         <p id="error-name"></p>
@@ -89,13 +89,12 @@
                     <div id="success-overlay">
                         <div class="success-message">
                             <p id="send-success"></p>
-                            
+
                             <button id="close-button" class="circle">
                                 <i class='bx bxs-x-circle' ></i>
                             </button>
                         </div>
                     </div>
-                    
                 </div>
             </div>
 
