Update: refresh after submit

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="success-message">
                             <p id="send-success"></p>
 
-                            <button id="close-button" class="circle">
+                            <button id="close-button" class="circle" onclick="window.location.reload()">
                                 <i class='bx bxs-x-circle' ></i>
                             </button>
                         </div>
