Checkpoint: option form

--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
                         <label for="interest">What are you interested in?</label>
                         <select name="interest" id="interest">
                             <option value="" selected>Select option</option>
-                            <option value="football">Football</option>
-                            <option value="badminton">Badminton</option>
+                            <option value="vegetable">Vegetable</option>
+                            <option value="fruit">Fruit</option>
+                            <option value="ingredient">Ingredient</option>
+                            <option value="kitchen-set">Kitchen Set</option>
+                            <option value="bundling-set">Bundling Set</option>
                         </select>
                         <p id="error-interest"></p>
 
