Update: missing image-tag double quote

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="content__left">
                     <div class="content__left-image">
                         <img class="image" src="assets/placeholder-image.png" alt="slider image" id="image">
-                        <span class="image-tag"><i>"Setiap hari beli sayur buah yang fresh di sini</i></span>
+                        <span class="image-tag"><i>"Setiap hari beli sayur buah yang fresh di sini"</i></span>
                     </div>
 
                     <div class="content__left-customer">
